RESOLVED FIXED52202
[GTK] minimal build breaks in RenderThemeGtk3
https://bugs.webkit.org/show_bug.cgi?id=52202
Summary [GTK] minimal build breaks in RenderThemeGtk3
Philippe Normand
Reported 2011-01-11 03:10:16 PST
missing if ENABLE(VIDEO) guards in RenderThemeGtk::initMediaColors()
Attachments
proposed patch (1.64 KB, patch)
2011-01-11 03:14 PST, Philippe Normand
eric: review+
Philippe Normand
Comment 1 2011-01-11 03:14:32 PST
Created attachment 78508 [details] proposed patch
Eric Seidel (no email)
Comment 2 2011-01-11 11:52:08 PST
Comment on attachment 78508 [details] proposed patch Does this need to check AUDIO as well? or is that part of VIDEO?
Philippe Normand
Comment 3 2011-01-12 01:26:13 PST
(In reply to comment #2) > (From update of attachment 78508 [details]) > Does this need to check AUDIO as well? or is that part of VIDEO? You mean WEB_AUDIO? No, I think this is not directly related with the media elements.
Philippe Normand
Comment 4 2011-01-12 01:28:15 PST
Note You need to log in before you can comment on or make changes to this bug.