2011-01-11  Philippe Normand  <pnormand@igalia.com>

Reviewed by Eric Seidel.

        [GTK] minimal build breaks in RenderThemeGtk3
        https://bugs.webkit.org/show_bug.cgi?id=52202

        * platform/gtk/RenderThemeGtk3.cpp: Added VIDEO guards around
        initMediaColors().

git-svn-id: svn://svn.chromium.org/blink/trunk@75591 bbb929c8-8fbe-4397-9dbb-9b2b20218538