third_party/WebKit/Source/WebCore/platform/gtk/RenderThemeGtk3.cpp
@@ -109,6 +109,7 @@ RenderThemeGtk::~RenderThemeGtk()
 {
 }
 
+#if ENABLE(VIDEO)
 void RenderThemeGtk::initMediaColors()
 {
     GdkRGBA color;
@@ -121,6 +122,7 @@ void RenderThemeGtk::initMediaColors()
     gtk_style_context_get_background_color(containerContext, GTK_STATE_FLAG_SELECTED, &color);
     m_sliderThumbColor = color;
 }
+#endif
 
 static void adjustRectForFocus(GtkStyleContext* context, IntRect& rect)
 {
